--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <td class="f">備考</td>
         </tr>
         <tr class="big">
-            <td>先発</td>
+            <td class="for_e">先発</td>
             <td class="kind" id="k1"><div class="local">普通</div></td>
             <td id="fj1" colspan="2" class="for_j">あざみ野</td>
             <!-- <td id="fe1" class="for_e">Haneda Airport</td> -->
@@ -31,7 +31,7 @@
             <td id="s1" class="exp"><marquee>桜木町、高島町、横浜、三ッ沢下町の順に停車</marquee></td>
         </tr>
         <tr class="big">
-            <td>次発</td>
+            <td class="for_e">次発</td>
             <td class="kind" id="k2"><div class="local">普通</div></td>
             <td id="fj2" colspan="2" class="for_j">新　羽</td>
             <!-- <td id="fe2" class="for_e">Haneda Airport</td> -->
@@ -49,7 +49,7 @@
             <td id="s3" class="exp"><marquee>桜木町、横浜、新横浜の順に停車</marquee></td>
         </tr>
     </table>
-    <script src="script.js"></script>
+    
     <div id="going">上大岡・戸塚・湘南台方面 <br></div>
     <table class="main">
         <tr>
@@ -60,7 +60,7 @@
             <td class="f">備考</td>
         </tr>
         <tr class="big">
-            <td>先発</td>
+            <td class="for_e">先発</td>
             <td class="kind" id="k01"><div class="local">普通</div></td>
             <td id="fj01" colspan="2" class="for_j">あざみ野</td>
             <!-- <td id="fe1" class="for_e">Haneda Airport</td> -->
@@ -69,7 +69,7 @@
             <td  class="exp"><marquee>桜木町、高島町、横浜、三ッ沢下町の順に停車</marquee></td>
         </tr>
         <tr class="big">
-            <td>次発</td>
+            <td class="for_e">次発</td>
             <td class="kind" id="k02"><div class="local">普通</div></td>
             <td id="fj02" colspan="2" class="for_j">新　羽</td>
             <!-- <td id="fe2" class="for_e">Haneda Airport</td> -->
@@ -90,6 +90,7 @@
             <td colspan="7"><marquee>このWebサイトをホーム画面に追加することで、日常に役立ててください。</marquee></td>
         </tr>
     </table>
+    <script src="script.js"></script>
     <script src="script0.js"></script>
 </body>
 </html>
