京浜東北線上りを追加、終電関連の処理の修正

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
         </tr>
 
     </table>
-    <span class="none">
     <div id="jr">京浜東北線 横浜・川崎・品川方面 <br></div>
     <table class="main">
         <tr>
@@ -125,7 +124,7 @@
             <td class="exp"><p id="s13" >桜木町、横浜、新横浜の順に停車</p></td>
         </tr>
         <tr class="ads">
-            <td colspan="7"><marquee>このWebサイトをホーム画面に追加することで、日常に役立ててください。</marquee></td>
+            <td colspan="7"><marquee>このWebサイトをホーム画面に追加することで、日常に役立ててください。なお、時刻表準拠のため実際の運航情報などについては別途確認お願いします。</marquee></td>
         </tr>
     </table>
     <script src="script.js"></script>
