スマホ版の表示を微調整

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <td class="exp"><p id="s2">桜木町、高島町、横浜、三ッ沢下町の順に停車</p></td>
         </tr>
         <tr class="big none">
-            <td>3</td>
+            <td class="for_e">次々発</td>
             <td class="kind" id="k3"><div class="rle">快速</div></td>
             <td id="fj3" colspan="2" class="for_j">新横浜</td>
             <!-- <td id="fe3" class="for_e">Haneda Airport</td> -->
@@ -77,7 +77,7 @@
             <td class="exp"><p id="s02">桜木町、高島町、横浜、三ッ沢下町の順に停車</p></td>
         </tr>
         <tr class="big none">
-            <td>3</td>
+            <td class="for_e">次々発</td>
             <td class="kind" id="k03"><div class="rle">快速</div></td>
             <td id="fj03" colspan="2" class="for_j">新横浜</td>
             <!-- <td id="fe3" class="for_e">Haneda Airport</td> -->
@@ -89,7 +89,7 @@
     </table>
     <div id="jr">京浜東北線 横浜・川崎・品川方面 <br></div>
     <table class="main">
-        <tr>
+        <tr class="col">
             <td class="a">発車順</td>
             <td class="b">種別</td>
             <td class="c" colspan="2">行先</td>
@@ -115,7 +115,7 @@
             <td class="exp"><p id="s12">各駅に停まります</p></td>
         </tr>
         <tr class="big none">
-            <td>3</td>
+            <td class="for_e">次々発</td>
             <td class="kind" id="k13"><div class="rle">快速</div></td>
             <td id="fj13" colspan="2" class="for_j">新横浜</td>
             <!-- <td id="fe3" class="for_e">Haneda Airport</td> -->
@@ -126,7 +126,7 @@
     </table>
     <div id="jr">京浜東北線 新杉田・大船方面 <br></div>
     <table class="main">
-        <tr>
+        <tr class="col">
             <td class="a">発車順</td>
             <td class="b">種別</td>
             <td class="c" colspan="2">行先</td>
@@ -136,7 +136,7 @@
         <tr class="big">
             <td class="for_e">先発</td>
             <td class="kind" id="k21"><div class="jr_lo">各駅停車</div></td>
-            <td id="fj21" colspan="2" class="for_j">南浦和</td>
+            <td id="fj21" colspan="2" class="for_j">磯　子</td>
             <!-- <td id="fe1" class="for_e">Haneda Airport</td> -->
             <td id="t21">14:03</td>
             
@@ -145,14 +145,14 @@
         <tr class="big">
             <td class="for_e">次発</td>
             <td class="kind" id="k22"><div class="jr_lo">各駅停車</div></td>
-            <td id="fj22" colspan="2" class="for_j">大　宮</td>
+            <td id="fj22" colspan="2" class="for_j">大　船</td>
             <!-- <td id="fe2" class="for_e">Haneda Airport</td> -->
             <td id="t22">14:05</td>
             
             <td class="exp"><p id="s22">各駅に停まります</p></td>
         </tr>
         <tr class="big none">
-            <td>3</td>
+            <td class="for_e">次々発</td>
             <td class="kind" id="k23"><div class="rle">快速</div></td>
             <td id="fj23" colspan="2" class="for_j">新横浜</td>
             <!-- <td id="fe3" class="for_e">Haneda Airport</td> -->
